updated style to fix alignment issue

--- a/Static/CSS/styles.css
+++ b/Static/CSS/styles.css
@@ -36,6 +36,14 @@ header {
     font-weight: bold;
 }
 
+.add {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: white;
+}
+
+
 .add:hover {
     background-color: deepskyblue;
     border-color: deepskyblue;
@@ -91,4 +99,8 @@ header {
         border-radius: 2px;
         border: 1px solid #222;
         
+}
+
+tr {
+    text-align: center;
 }
